fixed floating menu on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@
     align-items: center;
   }
   .foot-menu-items {
-    max-width: 60%;
+    max-width: 70%;
     font-size: 1rem;
   }
   .foot-menu-items ul{
